model: add .predict_batch
- api only generates single item endpoints
- use predict_batch where necessary
- fix signatures
- fix tf model testing
